# cybernetic-trpg-playersheet

./: .gitignore  Cargo.toml  README.md  book_path  run_test.sh
base_game/balance/: Full Caster.balance.lua  Full Martial.balance.lua  Half Caster.balance.lua
base_game/class/: Shadowjack.class.lua  Spirit Brewer.class.lua
src/: archive-old.rs  archive.rs  book.rs  book.rs.old  dialog.rs  gui.rs  main.rs  playersheet.rs  psheet_io.rs  sheet.rs  view.rs
src/base_game/balance/: Full Caster.balance.lua  Full Martial.balance.lua  Half Caster.balance.lua
src/base_game/class/: Spirit Brewer.class.lua
src/book/: class.rs  lua_object.rs  mod.rs
src/playersheet/: create_or_open_dialog_app.rs  default.rs  io.rs  mod.rs
src/sheet/: ability.rs  book.rs  book_file.rs  character.rs  mod.rs  source.rs
src/view/: book.rs  book.rs.old  mod.rs  sheet.rs  sheet.rs.old
