[package]
name = "cybernetic-trpg-playersheet"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.9.2"
mlua = { version = "0.10.2", features = ["luau", "vendored"] }
non-empty-string = { version = "0.2.5", features = ["serde"] }
redb = "2.2.0"
rfd = "0.15.0"
serde = "1.0.213"
serde_json = "1.0.132"
tar = "0.4.43"
