[package]
name = "cybernetic-trpg-playersheet"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.9.2"
mlua = { version = "0.10.2", features = ["luau", "vendored"] }
non-empty-string = { version = "0.2.5", features = ["serde"] }
rfd = "0.15.0"
serde = "1.0.213"
serde_json = "1.0.132"
zip = "2.2.1"
